1998-12-01  Dietmar Maurer  <dm@vlsivie.tuwien.ac.at>

	* gnome-app-helper.[ch]: use the new gtk_pixmap_menu_item.
	Removed indent_missing_pixmap parameter, since correct
	indentation is handled by gtk_pixmap_menu_item. 
	create_pixmap_and_label replaced by create_label.

	* gtkpixmapmenuitem.c: added new remove function.
	
1998-12-01  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c, gnome-mdi-child.[ch], gnome-mdi-generic-child.[ch]
	gnome-mdi-session.c: applied James Henstridge's interp modifications
	to make creating bindings for other languages easier.

1998-11-30  Justin Maurer  <justin@openprojects.net>

	* gnome-paper-selector: merge old code with new, add in seth's
	changes. sloppy. will test more.

1998-11-30  Jonathan Blandford  <jrb@aware-of-vacuity.labs.redhat.com>

	* gnome-popup-help.c (gnome_popup_help_place_window): quick buglet fix

1998-11-29  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.h: Removed obsolete comment about
	gnome_icon_list_new_thawed().

	* gnome-icon-list.c: All the assertions that checked for the
	number of icons in the ilist were wrong.  Fixed them.

1998-11-29  Justin Maurer  <justin@openprojects.net>

	* gnome-app-helper.c: voila! done. small scattered bugfixes.

1998-11-29  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-client.c (client_save_yourself_possibly_done): New function.
	(client_save_phase_2_callback): Uses new function.
	(client_save_yourself_callback): Likewise.
	(gnome_interaction_key_return): Likewise.

1998-11-29  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c, gnome-mdi-child.[ch], gnome-mdi-generic-child.[ch]:
	changed all occurences of set_book_label to set_label.
	* gnome-mdi.c (child_list_menu_*): use set_label function
	to provide menu item labels as well as notebook page labels!
	
1998-11-29  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-sel.c (gnome_icon_selection_init): Fix to the new
	behaviour of GnomeIconList.
